--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Landing Navigation -->
         <nav class="landing-navbar">
             <div class="nav-brand">
-                <h2>Stellar Ambassador</h2>
+                <h2>SAS</h2>
             </div>
             <button class="hamburger-menu" id="landing-hamburger-menu">
                 <span></span>
@@ -30,42 +30,42 @@
         </nav>
 
         <div class="hero">
-            <div class="hero-content">
+            <div class="hero-main-content">
                 <h1>Stellar Ambassador</h1>
                 <p class="subtitle">Join the Stellar ecosystem community</p>
                 <p>Connect with fellow ambassadors, share insights, and contribute to the growth of decentralized finance on Stellar.</p>
                 <button id="get-started-btn" class="btn btn-primary">Get Started</button>
-                
-                <!-- Features Section -->
-                <div class="features-section">
-                    <h3>What you can do as a Stellar Ambassador:</h3>
-                    <div class="features-grid">
-                        <div class="feature-item">
-                            <div class="feature-icon">📝</div>
-                            <h4>Post Events</h4>
-                            <p>Share upcoming Stellar events, meetups, and community gatherings</p>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">📈</div>
-                            <h4>Share Progress</h4>
-                            <p>Document your journey and showcase your contributions to the ecosystem</p>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">👥</div>
-                            <h4>View Fellow Work</h4>
-                            <p>Discover and learn from other ambassadors' projects and achievements</p>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">🏆</div>
-                            <h4>Award & Be Rewarded</h4>
-                            <p>Vote on contributions and earn recognition for your own work</p>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">🤝</div>
-                            <h4>Connect with Peers</h4>
-                            <p>Build relationships with like-minded ambassadors worldwide</p>
-                        </div>
-                    </div>
+            </div>
+        </div>
+        
+        <!-- Features Section - separate from hero -->
+        <div class="features-section">
+            <h3>What you can do as a Stellar Ambassador:</h3>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <div class="feature-icon">📝</div>
+                    <h4>Post Events</h4>
+                    <p>Share upcoming Stellar events, meetups, and community gatherings</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">📈</div>
+                    <h4>Share Progress</h4>
+                    <p>Document your journey and showcase your contributions to the ecosystem</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">👥</div>
+                    <h4>View Fellow Work</h4>
+                    <p>Discover and learn from other ambassadors' projects and achievements</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">🏆</div>
+                    <h4>Award & Be Rewarded</h4>
+                    <p>Vote on contributions and earn recognition for your own work</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">🤝</div>
+                    <h4>Connect with Peers</h4>
+                    <p>Build relationships with like-minded ambassadors worldwide</p>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
         <!-- Navigation -->
         <nav class="navbar">
             <div class="nav-brand">
-                <h2>Stellar Ambassador</h2>
+                <h2>SAS</h2>
             </div>
             <button class="hamburger-menu" id="hamburger-menu">
                 <span></span>
