--- a/index.html
+++ b/index.html
@@ -42,28 +42,62 @@
         <div class="features-section">
             <h3>What you can do as a Stellar Ambassador:</h3>
             <div class="features-grid">
-                <div class="feature-item">
-                    <div class="feature-icon">📝</div>
+                <div class="feature-item" data-animation="fadeInUp" data-delay="0">
+                    <div class="feature-icon">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                            <polyline points="14,2 14,8 20,8"></polyline>
+                            <line x1="16" y1="13" x2="8" y2="13"></line>
+                            <line x1="16" y1="17" x2="8" y2="17"></line>
+                            <polyline points="10,9 9,9 8,9"></polyline>
+                        </svg>
+                    </div>
                     <h4>Post Events</h4>
                     <p>Share upcoming Stellar events, meetups, and community gatherings</p>
                 </div>
-                <div class="feature-item">
-                    <div class="feature-icon">📈</div>
+                <div class="feature-item" data-animation="fadeInUp" data-delay="100">
+                    <div class="feature-icon">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="22,12 18,12 15,21 9,3 6,12 2,12"></polyline>
+                        </svg>
+                    </div>
                     <h4>Share Progress</h4>
                     <p>Document your journey and showcase your contributions to the ecosystem</p>
                 </div>
-                <div class="feature-item">
-                    <div class="feature-icon">👥</div>
+                <div class="feature-item" data-animation="fadeInUp" data-delay="200">
+                    <div class="feature-icon">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="9" cy="7" r="4"></circle>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                        </svg>
+                    </div>
                     <h4>View Fellow Work</h4>
                     <p>Discover and learn from other ambassadors' projects and achievements</p>
                 </div>
-                <div class="feature-item">
-                    <div class="feature-icon">🏆</div>
+                <div class="feature-item" data-animation="fadeInUp" data-delay="300">
+                    <div class="feature-icon">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+                            <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+                            <path d="M4 22h16"></path>
+                            <path d="M10 14.66V17c0 .55.47.98.97 1.21l1.03.34c.45.15.95.15 1.4 0l1.03-.34c.5-.23.97-.66.97-1.21v-2.34"></path>
+                            <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"></path>
+                        </svg>
+                    </div>
                     <h4>Award & Be Rewarded</h4>
                     <p>Vote on contributions and earn recognition for your own work</p>
                 </div>
-                <div class="feature-item">
-                    <div class="feature-icon">🤝</div>
+                <div class="feature-item" data-animation="fadeInUp" data-delay="400">
+                    <div class="feature-icon">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path>
+                            <rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect>
+                            <line x1="12" y1="11" x2="12" y2="17"></line>
+                            <line x1="9" y1="14" x2="15" y2="14"></line>
+                        </svg>
+                    </div>
                     <h4>Connect with Peers</h4>
                     <p>Build relationships with like-minded ambassadors worldwide</p>
                 </div>
@@ -115,27 +149,48 @@
         <button id="create-post-btn" class="floating-btn">+</button>
     </div>
 
-    <!-- Setup Modal -->
-    <div id="setup-modal" class="modal">
-        <div class="modal-content">
-            <h2>Setup Your Profile</h2>
-            <form id="setup-form">
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal">
+        <div class="modal-content small-modal">
+            <h2>Login</h2>
+            <form id="login-form">
                 <div class="form-group">
-                    <label for="display-name">Display Name</label>
-                    <input type="text" id="display-name" required>
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <label for="login-pin">PIN</label>
+                    <div class="pin-input-container">
+                        <input type="password" id="login-pin" maxlength="4" pattern="[0-9]{4}" required>
+                        <button type="button" class="pin-toggle" id="login-pin-toggle">👁️</button>
+                    </div>
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Signup Modal -->
+    <div id="signup-modal" class="modal">
+        <div class="modal-content small-modal">
+            <h2>Sign Up</h2>
+            <form id="signup-form">
+                <div class="form-group">
+                    <label for="signup-name">Display Name</label>
+                    <input type="text" id="signup-name" required>
                 </div>
                 <div class="form-group">
-                    <label for="pin">4-digit PIN</label>
-                    <input type="password" id="pin" maxlength="4" pattern="[0-9]{4}" required>
+                    <label for="signup-email">Email</label>
+                    <input type="email" id="signup-email" required>
                 </div>
                 <div class="form-group">
-                    <label>Wallet Connection (Optional)</label>
-                    <button type="button" id="connect-wallet-btn" class="btn btn-secondary">Connect Wallet</button>
-                    <div id="wallet-status" class="wallet-status">You can connect your wallet later in your profile</div>
+                    <label for="signup-pin">4-digit PIN</label>
+                    <div class="pin-input-container">
+                        <input type="password" id="signup-pin" maxlength="4" pattern="[0-9]{4}" required>
+                        <button type="button" class="pin-toggle" id="signup-pin-toggle">👁️</button>
+                    </div>
                 </div>
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">Create Account</button>
