--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                     </div>
                 </div>
                 <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" id="cancel-login-btn">Cancel</button>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </div>
             </form>
@@ -193,6 +194,7 @@
                     </div>
                 </div>
                 <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" id="cancel-signup-btn">Cancel</button>
                     <button type="submit" class="btn btn-primary">Create Account</button>
                 </div>
             </form>
