--- a/index.html
+++ b/index.html
@@ -165,12 +165,54 @@
             <div class="posts-container" id="posts-container">
                 <!-- Posts will be dynamically loaded here -->
             </div>
+            
+            <!-- Bottom Navigation -->
+            <div class="bottom-nav">
+                <button class="bottom-nav-btn active" data-view="feed">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                        <polyline points="9,22 9,12 15,12 15,22"></polyline>
+                    </svg>
+                </button>
+                <button class="bottom-nav-btn" data-view="chat">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                    </svg>
+                </button>
+                <button class="bottom-nav-btn" data-view="ai">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                        <circle cx="12" cy="16" r="1"></circle>
+                        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                    </svg>
+                </button>
+                <button class="bottom-nav-btn" data-view="notifications">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                        <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                    </svg>
+                </button>
+            </div>
         </div>
 
         <!-- Leaderboard View -->
         <div id="leaderboard-view" class="view-content">
             <div class="leaderboard-container" id="leaderboard-container">
                 <!-- Leaderboard will be dynamically loaded here -->
+            </div>
+        </div>
+
+        <!-- Chat View -->
+        <div id="chat-view" class="view-content">
+            <div class="chat-container" id="chat-container">
+                <!-- Chat will be dynamically loaded here -->
+            </div>
+        </div>
+
+        <!-- AI View -->
+        <div id="ai-view" class="view-content">
+            <div class="ai-container" id="ai-container">
+                <!-- AI assistant will be dynamically loaded here -->
             </div>
         </div>
 
