--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
                         <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                     </svg>
                 </button>
+                <button class="bottom-nav-btn create-post-btn" id="create-post-btn">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <line x1="5" y1="12" x2="19" y2="12"></line>
+                    </svg>
+                </button>
                 <button class="bottom-nav-btn" data-view="ai">
                     <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
@@ -230,8 +236,6 @@
             </div>
         </div>
 
-        <!-- Floating Create Post Button -->
-        <button id="create-post-btn" class="floating-btn">+</button>
     </div>
 
     <!-- Login Modal -->
