--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
                 <div class="sidebar-header">
                     <button class="close-sidebar" id="close-sidebar">×</button>
                 </div>
+                <div class="profile-section">
+                    <div class="profile-avatar">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
+                    </div>
+                    <div class="profile-info">
+                        <div class="profile-name" id="profile-name">Loading...</div>
+                        <div class="profile-buddies" id="profile-buddies">0 buddies</div>
+                    </div>
+                </div>
                 <div class="sidebar-links">
                     <button class="sidebar-link" data-view="dashboard">
                         Dashboard
@@ -135,11 +147,8 @@
                     <button class="sidebar-link" data-view="notifications">
                         Notifications
                     </button>
-                </div>
-                <div class="sidebar-footer">
                     <button class="sidebar-link profile-link" data-view="profile">
-                        <span class="link-icon">👤</span>
-                        Profile
+                        Profile Settings
                     </button>
                 </div>
             </div>
