--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="landing-nav-links" id="landing-nav-links">
                 <a href="#about" class="landing-nav-link">About</a>
                 <a href="#contact" class="landing-nav-link">Contact</a>
+                <button class="landing-nav-link" id="view-leaderboard-btn" style="background: none; border: none; cursor: pointer; font-size: inherit; color: inherit; text-decoration: none; font-weight: inherit;">Leaderboard</button>
                 <div class="auth-buttons">
                     <button class="btn btn-secondary" id="login-btn">Login</button>
                     <button class="btn btn-primary" id="signup-btn">Sign Up</button>
@@ -231,10 +232,13 @@
                         <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
                     </svg>
                 </button>
-                <button class="bottom-nav-btn active" data-view="notifications">
+                <button class="bottom-nav-btn active" data-view="leaderboard">
                     <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                        <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                        <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+                        <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+                        <path d="M4 22h16"></path>
+                        <path d="M10 14.66V17c0 .55.47.98.97 1.21l1.03.34c.45.15.95.15 1.4 0l1.03-.34c.5-.23.97-.66.97-1.21v-2.34"></path>
+                        <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"></path>
                     </svg>
                 </button>
             </div>
