--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     <div id="app-view" class="view">
         <!-- Navigation -->
         <nav class="navbar">
+            <div class="navbar-brand">
+                <h3>SAS</h3>
+            </div>
             <button class="hamburger-menu" id="hamburger-menu">
                 <span></span>
                 <span></span>
@@ -137,17 +140,63 @@
                 </div>
                 <div class="sidebar-links">
                     <button class="sidebar-link" data-view="dashboard">
+                        <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="3" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="14" width="7" height="7"></rect>
+                            <rect x="3" y="14" width="7" height="7"></rect>
+                        </svg>
                         Dashboard
                     </button>
                     <button class="sidebar-link active" data-view="feed">
+                        <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                            <polyline points="9,22 9,12 15,12 15,22"></polyline>
+                        </svg>
                         Feed
                     </button>
                     <button class="sidebar-link" data-view="leaderboard">
+                        <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+                            <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+                            <path d="M4 22h16"></path>
+                            <path d="M10 14.66V17c0 .55.47.98.97 1.21l1.03.34c.45.15.95.15 1.4 0l1.03-.34c.5-.23.97-.66.97-1.21v-2.34"></path>
+                            <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"></path>
+                        </svg>
                         Leaderboard
                     </button>
                     <button class="sidebar-link profile-link" data-view="profile">
+                        <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
                         Profile Settings
                     </button>
+                    
+                    <!-- Desktop-only links -->
+                    <div class="desktop-only-links">
+                        <button class="sidebar-link" data-view="chat">
+                            <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                            </svg>
+                            Chat
+                        </button>
+                        <button class="sidebar-link" data-view="ai">
+                            <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                <circle cx="12" cy="16" r="1"></circle>
+                                <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                            </svg>
+                            AI Assistant
+                        </button>
+                        <button class="sidebar-link" data-view="notifications">
+                            <svg class="sidebar-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                            </svg>
+                            Notifications
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
