--- a/index.html
+++ b/index.html
@@ -9,98 +9,13 @@
 <body>
     <!-- Landing View -->
     <div id="landing-view" class="view active">
-        <!-- Landing Navigation -->
-        <nav class="landing-navbar">
-            <div class="nav-brand">
-                <h2>SAS</h2>
-            </div>
-            <button class="hamburger-menu" id="landing-hamburger-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <div class="landing-nav-links" id="landing-nav-links">
-                <a href="#about" class="landing-nav-link">About</a>
-                <a href="#contact" class="landing-nav-link">Contact</a>
-                <button class="landing-nav-link" id="view-leaderboard-btn" style="background: none; border: none; cursor: pointer; font-size: inherit; color: inherit; text-decoration: none; font-weight: inherit;">Leaderboard</button>
-                <div class="auth-buttons">
-                    <button class="btn btn-secondary" id="login-btn">Login</button>
-                    <button class="btn btn-primary" id="signup-btn">Sign Up</button>
-                </div>
-            </div>
-        </nav>
-
-        <div class="hero">
-            <div class="hero-main-content">
-                <h1>Stellar Ambassador</h1>
-                <p class="subtitle">Join the Stellar ecosystem community</p>
-                <p>Connect with fellow ambassadors, share insights, and contribute to the growth of decentralized finance on Stellar.</p>
-                <button id="get-started-btn" class="btn btn-primary">Get Started</button>
-            </div>
-        </div>
-        
-        <!-- Features Section - separate from hero -->
-        <div class="features-section">
-            <h3>What you can do as a Stellar Ambassador:</h3>
-            <div class="features-grid">
-                <div class="feature-item" data-animation="fadeInUp" data-delay="0">
-                    <div class="feature-icon">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                            <polyline points="14,2 14,8 20,8"></polyline>
-                            <line x1="16" y1="13" x2="8" y2="13"></line>
-                            <line x1="16" y1="17" x2="8" y2="17"></line>
-                            <polyline points="10,9 9,9 8,9"></polyline>
-                        </svg>
-                    </div>
-                    <h4>Post Events</h4>
-                    <p>Share upcoming Stellar events, meetups, and community gatherings</p>
-                </div>
-                <div class="feature-item" data-animation="fadeInUp" data-delay="100">
-                    <div class="feature-icon">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="22,12 18,12 15,21 9,3 6,12 2,12"></polyline>
-                        </svg>
-                    </div>
-                    <h4>Share Progress</h4>
-                    <p>Document your journey and showcase your contributions to the ecosystem</p>
-                </div>
-                <div class="feature-item" data-animation="fadeInUp" data-delay="200">
-                    <div class="feature-icon">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="9" cy="7" r="4"></circle>
-                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                        </svg>
-                    </div>
-                    <h4>View Fellow Work</h4>
-                    <p>Discover and learn from other ambassadors' projects and achievements</p>
-                </div>
-                <div class="feature-item" data-animation="fadeInUp" data-delay="300">
-                    <div class="feature-icon">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
-                            <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
-                            <path d="M4 22h16"></path>
-                            <path d="M10 14.66V17c0 .55.47.98.97 1.21l1.03.34c.45.15.95.15 1.4 0l1.03-.34c.5-.23.97-.66.97-1.21v-2.34"></path>
-                            <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"></path>
-                        </svg>
-                    </div>
-                    <h4>Award & Be Rewarded</h4>
-                    <p>Vote on contributions and earn recognition for your own work</p>
-                </div>
-                <div class="feature-item" data-animation="fadeInUp" data-delay="400">
-                    <div class="feature-icon">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path>
-                            <rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect>
-                            <line x1="12" y1="11" x2="12" y2="17"></line>
-                            <line x1="9" y1="14" x2="15" y2="14"></line>
-                        </svg>
-                    </div>
-                    <h4>Connect with Peers</h4>
-                    <p>Build relationships with like-minded ambassadors worldwide</p>
+        <div class="landing-container">
+            <div class="landing-content">
+                <h1 class="app-title">Glück</h1>
+                <p class="app-tagline">Where Stellar Ambassadors Shine</p>
+                <div class="landing-buttons">
+                    <button id="get-started-btn" class="btn btn-primary">Get Started</button>
+                    <button id="login-btn" class="btn btn-secondary">Login</button>
                 </div>
             </div>
         </div>
