--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <div id="payment-modal" class="modal">
         <div class="modal-content payment-modal-content">
             <div class="payment-header">
-                <h2>Send XLM</h2>
+                <h2>Reward with XLM's</h2>
                 <button class="close-btn" id="close-payment-modal">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <line x1="18" y1="6" x2="6" y2="18"></line>
