--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stellar Ambassador</title>
+    <title>Failbook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,11 +11,12 @@
     <div id="landing-view" class="view active">
         <div class="landing-container">
             <div class="landing-content">
-                <h1 class="app-title">Glück</h1>
-                <p class="app-tagline">Where Stellar Ambassadors Shine</p>
+                <h1 class="app-title">FailBook</h1>
+                <p class="app-tagline">Welcome to the Graveyard of Dreams</p>
+                <p class="app-tagline">Connect with 1000+ fellow losers,You are not the only idiot</p>
                 <div class="landing-buttons">
-                    <button id="get-started-btn" class="btn btn-primary">Get Started</button>
-                    <button id="login-btn" class="btn btn-secondary">Login</button>
+                    <button id="get-started-btn" class="btn btn-primary">Join the Losers</button>
+                    <button id="login-btn" class="btn btn-secondary">Crawl Back In</button>
                 </div>
             </div>
         </div>
