--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="landing-view" class="view active">
         <div class="landing-container">
             <div class="landing-content">
-                <h1 class="app-title">FailBook</h1>
+                <h1 class="app-title">FailBuk</h1>
                 <p class="app-tagline">Welcome to the Graveyard of Dreams</p>
                 <p class="app-tagline">Connect with 1000+ fellow losers,You are not the only idiot</p>
                 <div class="landing-buttons">
